Select titles by libraryId & Get JWT using API Key