@@ -3,18 +3,20 @@ package com.automanga.service;
 import com.automanga.clients.KavitaClient;
 import com.automanga.dtos.kavita.responses.SeriesTitleResponse;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.security.InvalidParameterException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class KavitaService {
 
     private final KavitaClient kavitaClient;
+    @Value("${kavita.library.ids}")
+    private List<Integer> kavitaLibraryIds;
 
     public KavitaService(final KavitaClient kavitaClient) {
         this.kavitaClient = kavitaClient;
@@ -47,8 +49,9 @@ public class KavitaService {
         List<String> names = titles
                 .orElse(List.of())
                 .stream()
+                .filter(title -> kavitaLibraryIds.contains(title.getLibraryId()))
                 .map(title -> formatForAutobrr(title.getName()) + ", " + formatForAutobrr(title.getLocalizedName()))
-                .collect(Collectors.toList());
+                .toList();
 
         log.info(String.valueOf(names).replace("[", "").replace("]", ""));
         return (names);
